[package]
name = "frankolang"
version = "0.1.0"
authors = ["Fronkles McFranko <mrelfranko@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
typetag = "0.1.6"
rand = "0.7.3"
